--- a/addProduct/addProduct.css
+++ b/addProduct/addProduct.css
@@ -80,14 +80,18 @@ main{
     margin-left: auto;
     margin-right: auto;
     width: 60vw;
-    height: 15vh;
+    height: 35vh;
 }
 
 .thirdSection{
     margin-left: auto;
     margin-right: auto;
-    width: 60vw;
-    height: 35vh;
+    width: 50%;
+    height: 50%;
+    margin-bottom: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 form{
@@ -133,9 +137,11 @@ form input[type="Submit"]{
 }
 
 @media only screen and (min-width:700px){
-    body{
-        background-color: aquamarine;
+  
+    .titulo{
+        margin-top: 2%;
+        flex-direction: row;
     }
-    
+
 }
 
