--- a/addProduct/addProduct.css
+++ b/addProduct/addProduct.css
@@ -73,7 +73,7 @@ header{
 main{
     display: flex;
     flex-direction: column;
-    gap:40px;
+    gap: 20px;
 }
 
 .secondSection{
@@ -139,8 +139,41 @@ form input[type="Submit"]{
 @media only screen and (min-width:700px){
   
     .titulo{
-        margin-top: 2%;
         flex-direction: row;
+        margin-top: 0;
+    }
+
+    header{
+        margin: none;
+    }
+
+    main{ 
+        display:grid;
+        grid-template-areas:
+                "section2 section1"
+                "section2 section3";      
+        grid-template-columns:1fr 1fr;
+        grid-template-rows: auto auto;
+       
+    }
+
+    .firstSection{
+        grid-area: section1;
+        width: 50%;
+    }
+
+    .secondSection{
+        grid-area: section2;
+        width:80%;
+        margin: 15% 0 15% 15%;
+    }
+
+    .thirdSection{
+        grid-area: section3;
+    }
+    
+    body{
+        margin: 5%;
     }
 
 }
