--- a/login/login.css
+++ b/login/login.css
@@ -13,12 +13,12 @@ header>img{
     z-index: 1;
 }
 
-.formulario>form{
+form{
     padding-top: 14px;
     padding-left: 12px;
 }
 
-.formulario>form>input{
+form>input{
     border-radius:50px;
     background-color: #D9D9D9;
     height: 25px;
@@ -31,28 +31,24 @@ header>img{
 }
 
 
-.usuario>img{
-    width: 50px;
-}
-
-.candado{
-    z-index: 3;
-    position: relative;
-    bottom: 175px;
-    padding-left: 230px;
-    width: 20px;
-}
-
 .candado>img{
     width: 50px;
+    z-index: 3;
+    position: relative;
+    left: 82%;
+    bottom: 60px;
 }
 
-.usuario{
+.usuario>img{
     z-index: 3;
     position: relative;
     padding-left: 10px;
     bottom: 52px;
+    width: 50px;
+}
 
+.usuario{
+    height: 80px;
 }
 
 form input[name="username"]{
