--- a/mainPage/mainPage.css
+++ b/mainPage/mainPage.css
@@ -2,7 +2,7 @@ body{
     flex-wrap: nowrap;
     display:flex;
     flex-direction: column;
-    background: var(--fondo, linear-gradient(180deg, #0E0C0C 13.46%, rgba(115, 15, 15, 0.86) 37.72%, rgba(120, 15, 15, 0.85) 37.73%, rgba(181, 14, 14, 0.64) 72.9%, rgba(234, 4, 4, 0.38) 100%));
+    background: var(--fondo, linear-gradient(180deg, #0E0C0C 13.46%, #730f0fdb 37.72%, rgba(120, 15, 15, 0.85) 37.73%, rgba(181, 14, 14, 0.64) 72.9%, rgba(234, 4, 4, 0.38) 100%));
 }
 
 .cabecera{
@@ -105,6 +105,9 @@ main{
     padding-right: 10px;
 }
 
+.rss>img{
+    mix-blend-mode: overlay;
+}
 
 
 
