--- a/addProduct/addProduct.css
+++ b/addProduct/addProduct.css
@@ -7,6 +7,8 @@ body{
     background: linear-gradient(180deg, #FFF 0%, rgba(255, 255, 255, 0.00) 100%);
 }
 
+
+/*Selector de tipo*/
 h1{
     color: #D1181D;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -18,6 +20,7 @@ h1{
     -webkit-text-stroke: 1px #000000; 
 }
 
+/*Selector de clase*/
 .titulo{
     display: flex;
     flex-direction: column;
@@ -31,6 +34,7 @@ header{
     justify-content: center;
 }
 
+/*Selector de clase dentro de un tipo concreto, dentro de section, la clase firstSection*/
 .firstSection{
     border: 2px #000000 dashed ;
     margin-left: auto;
