--- a/mainPage/mainPage.css
+++ b/mainPage/mainPage.css
@@ -24,13 +24,21 @@ body{
     margin-right: 50px;
 }
 
+.etiquetas{
+    color: white;
+    background-color: black;
+    margin: 20px 20px 10px 20px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;   
+}
 
 nav{
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     color: white;
-    justify-content: space-around;
     font-family: Odor Mean Chey;
 }
 
@@ -90,14 +98,27 @@ main{
     gap:100px;
 }
 
+/*Asociar varias clases a un mismo elemento (camisetaMargen y contenedor)*/
+
 .contenedor{
     display: flex;
     flex-direction: column;
     border: 3px solid #000;
     background: rgba(255, 255, 255, 0.71);
-    margin-left: 20px;
-    margin-right: 0;
     width: 30%;
+}
+
+
+ul{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    gap: 25%;
+    width: 32%;
+}
+
+.camisetaConMargen{
+    margin-left: 2%;
 }
 
 .foto{
@@ -116,19 +137,19 @@ main{
     padding-right: 10px;
 }
 
-<<<<<<< HEAD
-.etiquetas{
-    color: white;
-    background-color: black;
-    margin: 20px 20px 10px 20px;
-    border-radius: 20px;
+.rss{
     display: flex;
     flex-direction: column;
-    align-items: center;   
-=======
+    gap:12px;
+}
+
+.flecha{
+    padding-top: 16px;
+    padding-left: 97%;
+}
+
 .rss>img{
     mix-blend-mode: overlay;
->>>>>>> 4b45dd2a9b26aa98d816191e59a35cfa65a3e006
 }
 
 /*Selector Descendiente*/
@@ -160,6 +181,26 @@ footer{
 
 .gmail{
     font-size:xx-small;
+    display: flex;
+    flex-direction: row;
+    gap:2px;
+}
+
+.telefono{
+    display: flex;
+    gap:3px;
+}
+
+.telefono>img{
+    width:10px;
+    height: 10px;
+    padding-top: 10px;
+}
+
+.gmail>img{
+    padding-top: 10px;;
+    width: 10px;
+    height: 10px;
 }
 
 .contact{
@@ -173,10 +214,14 @@ footer{
 }
 
 
+footer{
+    margin-top: 4%;
+}
 
 
 
-@media only screen and (max-width:700px){
+
+@media only screen and (max-width:1000px){
 
    #desaparecer{
     display: none;
@@ -195,11 +240,32 @@ footer{
     height: 35%;
    }
 
+   .deslizar img{
+    padding-left: 35px;
+    width: 50%;
+   }
+
+   .flecha{
+    visibility:hidden;
+   }
+
     .camisetas{
         align-items: center;
         gap: 0px;
     }
 
+    ul{
+        width: 90%;
+    }
+
+
+    .iconos>img{
+        width: 50px;
+    }
+
+    a>img{
+        width: 40px;
+    }
 
 }
 
