--- a/mainPage/mainPage.css
+++ b/mainPage/mainPage.css
@@ -173,6 +173,10 @@ footer{
     margin: 0;
 }
 
+/*Selector con pseoudoclase*/
+li:hover{
+    color: yellowgreen;
+}
 
 /*Selector adyacente*/
 .telefono>img + p{
