--- a/register/register.css
+++ b/register/register.css
@@ -26,6 +26,8 @@ header{
     margin: 10%;
 }
 
+/*Selector combinado*/
+
 header>img[alt="usuario"]{
     width: 60px;
     padding: 10px;
@@ -56,6 +58,7 @@ form input[type="text"]{
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
+/*Selector con pseudoelemento*/
 input::placeholder{
     padding: 3%;
     
