--- a/register/register.css
+++ b/register/register.css
@@ -120,27 +120,14 @@ form input[type="Submit"]{
     header{
         margin: 5%;
     }
-
-
-
-    
-
-    
-
-    
-   
-
-
-
-
-
-    
-
-
-
-
-
-
-
 }
 
+@media print {
+    
+    body{
+
+        color: black;
+        background-color: white;
+    }
+
+}  
