--- a/mainPage/mainPage.css
+++ b/mainPage/mainPage.css
@@ -104,7 +104,7 @@ main{
     display: flex;
     flex-direction: column;
     border: 3px solid #000;
-    background: rgba(255, 255, 255, 0.71);
+    background: hsla(0, 0%, 100%, 0.71);
     width: 30%;
 }
 
