--- a/register/register.css
+++ b/register/register.css
@@ -1,3 +1,16 @@
+.error{
+    border-color: red;
+}
+
+.mensajeError{
+    font-weight: bold;
+    font-size: large;
+    display: block;
+    margin-top: 10px;
+}
+
+
+
 body{
     height: 100vh;
     display: flex;
@@ -23,7 +36,6 @@ header{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 10%;
 }
 
 /*Selector combinado*/
@@ -31,13 +43,6 @@ header{
 header>img[alt="usuario"]{
     width: 60px;
     padding: 10px;
-}
-
-main{
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-
 }
 
 form{
@@ -58,10 +63,20 @@ form input[type="text"]{
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
+form input[type="password"]{
+    font-family: Raleway;
+    background-color: #ffffff;
+    padding-left: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    width: 97%;
+    height: 2.5vh;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
 /*Selector con pseudoelemento*/
 input::placeholder{
     padding: 3%;
-    
 }
 
 form input[type="Submit"]{
@@ -72,8 +87,11 @@ form input[type="Submit"]{
     width: 300px;
     height: 40px;
     font-size:large;
-    padding: 2%;
-    
+    padding: 2%; 
+}
+
+form div {
+    margin-bottom: 20px;
 }
 
 @media only screen and (min-width:700px){
@@ -118,7 +136,7 @@ form input[type="Submit"]{
     }
     
     header{
-        margin: 5%;
+        margin: 3%;
     }
 }
 
