--- a/mainPage/mainPage.css
+++ b/mainPage/mainPage.css
@@ -6,6 +6,10 @@ body{
     background-repeat: no-repeat;
 }
 
+.foto>img{
+    width: 300px;
+}
+
 .cabecera{
     display: flex;
     flex-direction: row;
@@ -94,8 +98,9 @@ main{
 .camisetas{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
-    gap:100px;
+    gap:10px;
 }
 
 /*Asociar varias clases a un mismo elemento (camisetaMargen y contenedor)*/
@@ -106,6 +111,8 @@ main{
     border: 3px solid #000;
     background: hsla(0, 0%, 100%, 0.71);
     width: 30%;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 
@@ -117,9 +124,6 @@ ul{
     width: 32%;
 }
 
-.camisetaConMargen{
-    margin-left: 2%;
-}
 
 .foto{
     border: 3px solid #000;
@@ -128,7 +132,7 @@ ul{
     display: flex;
     flex-direction: column;
     background-color: white;
-    gap:20px;
+    gap:10px;
     align-items: center;
 }
 
@@ -250,7 +254,7 @@ li:hover{
 
     .camisetas{
         align-items: center;
-        gap: 0px;
+        gap: 20px;
     }
 
     ul{
