--- a/addProduct/addProduct.css
+++ b/addProduct/addProduct.css
@@ -102,6 +102,17 @@ form{
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
+.error{
+    border-color: red;
+}
+
+.mensajeError{
+    font-weight: bold;
+    font-size: large;
+    display: block;
+    margin-top: 10px;
+}
+
 form input[type="text"]{
     font-family: Raleway;
     background-color: #E0E0E0;
