--- a/mainPage/mainPage.css
+++ b/mainPage/mainPage.css
@@ -41,6 +41,7 @@ body{
 nav{
     display: flex;
     flex-direction: row;
+    justify-content: center;
     flex-wrap: nowrap;
     color: white;
     font-family: Odor Mean Chey;
@@ -107,21 +108,124 @@ main{
 
 .contenedor{
     display: flex;
+    gap:5px;
     flex-direction: column;
     border: 3px solid #000;
     background: hsla(0, 0%, 100%, 0.71);
     width: 30%;
-    margin-left: 1%;
-    margin-right: 1%;
+    margin: auto;
+    padding-bottom: 2%;
 }
+
+#tituloLogIn{
+    font-family: Odor Mean Chey;
+    color: white;
+    z-index: 4;
+    position: relative;
+}
+
+.camisetas button {
+    margin: auto;
+    border-color: #ffffff;
+    padding: 0.6em 2.3em;
+    cursor: pointer;
+    font-size: 1em;
+    color: #000000;
+    background-image: linear-gradient(45deg, transparent 50%, #000000 50%);
+    background-position: 25%;
+    background-size: 400%;
+    -webkit-transition: background 500ms ease-in-out, color 500ms ease-in-out;
+    transition: background 500ms ease-in-out, color 500ms ease-in-out;
+}
+
+.camisetas button:hover{
+    color: #ffffff;
+    background-position: 100%;
+}
+
+.desaparecer{
+    display: none;
+}
+
+
+.bn47 a {
+    text-decoration: none;
+    font-family: Odor Mean Chey;
+    font-size: x-large;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.bn47 a:visited{
+    color: black;
+    text-decoration: none;
+    font-family: Odor Mean Chey;
+    font-size: x-large;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.bn47 {
+
+    position: relative;
+    padding: 1rem 2rem 0.5rem 2.5rem;
+    color: #000000;
+    border: 3px solid #776e62;
+    -webkit-transition: padding 0.3s ease-in-out;
+    transition: padding 0.3s ease-in-out;
+  }
+  
+  .bn47:before {
+    content: "";
+    position: absolute;
+    top: 0.5rem;
+    left: 0.5rem;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    background-color: #ffffff;
+    border-right: 3px solid #ffffff;
+    border-bottom: 3px solid #ffffff;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .bn47:hover {
+    padding: 0.75rem 2.25rem;
+  }
+  
+  .bn47:hover:before {
+    top: 0;
+    left: 0;
+  }
+
+
+ul>button{
+    background: none;
+  border: 0;
+  color: inherit;
+  /* cursor: default; */
+  font: inherit;
+  line-height: normal;
+  overflow: visible;
+  padding: 0;
+  -webkit-user-select: none; /* for button */
+   -webkit-appearance: button; /* for input */
+     -moz-user-select: none;
+      -ms-user-select: none;
+}
+
+ul>button:hover{
+    color: yellowgreen;
+    cursor: pointer;
+}
+
 
 
 ul{
     list-style: none;
     display: flex;
+    justify-content: space-around;
+    width: 100%;
     flex-direction: row;
-    gap: 25%;
-    width: 32%;
 }
 
 
